tests/baselines/reference/structNotImplementingInterface.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structNotImplementingInterface.ts(5,9): error TS20024: A struct can not implement another class or interface.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structNotImplementingInterface.ts (1 errors) ====
    interface C {
    	foo: string;
    }
    
    struct D implements C { // error. struct cannot implement interface
            ~~~~~~~~~~~~~
!!! error TS20024: A struct can not implement another class or interface.
    	foo: string;
    }
    